[package]
name = "icu4x-test262"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icu_locid_transform = { version = "1", features = ["serde"] }
icu_locid = { version = "1", features = ["serde"] }
icu_datetime = { version = "1", features = ["serde"] }
icu_plurals = { version = "1", features = ["serde"] }
icu_provider = { version = "1" }
icu_provider_adapters = { version = "1", features = ["serde"] }
icu_decimal = { version = "1", features = ["serde"] }
icu_testdata = { version = "1" }
serde = "1"
