[package]
name = "icu4x-test262"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icu_locid_transform = { git = "https://github.com/unicode-org/icu4x.git", features = ["serde"] }
icu_locid = { git = "https://github.com/unicode-org/icu4x.git", features = ["serde"] }
icu_datetime = { git = "https://github.com/unicode-org/icu4x.git", features = ["serde"] }
icu_plurals = { git = "https://github.com/unicode-org/icu4x.git", features = ["serde"] }
icu_provider = { git = "https://github.com/unicode-org/icu4x.git" }
icu_provider_adapters = { git = "https://github.com/unicode-org/icu4x.git", features = ["serde"] }
icu_decimal = { git = "https://github.com/unicode-org/icu4x.git", features = ["serde"] }
icu_testdata = { git = "https://github.com/unicode-org/icu4x.git", features = ["buffer"] }
icu_collator = { git = "https://github.com/unicode-org/icu4x.git", features = ["serde"] }
serde = "1"
